# Ctp.Net.Next

./: .clangd  .gitignore  CLAUDE.md  Directory.Build.props  NATIVE_BUILD.md  README.md  README.zh-CN.md
.claude/skills/ctp/: SKILL.md
.claude/skills/ctp/docs/: pitfalls.md
.claude/skills/ctp/docs/reference/: #URLSTR  6.5.1BBGXSMBCSM.html  6.6.9BBGXSM.html  6.7.13BBGXSM.html  (+4 more)
.github/workflows/: build.yml  ci.yml  nuget.yml  test.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-13-implement-trader-margin-and-commission-queries/: check.jsonl  prd.md  task.json
.trellis/workspace/layez/: index.md  journal-1.md
Ctp.Bridge.C/: CMakeLists.txt  build.ps1
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/: #IDXHDR  #STRINGS  #SYSTEM  #URLTBL  6.5.1BBGXSM.html  6.6.7BBGXSM.html  6.7.0BBGXSM.html  6.7.10BBGXSM.html  6.7.2BBGXSM.html  6.7.7BBGXSM.html  6.7.8BBGXSM.html  API接口说明.hhc  TGateFtdcApi.h  TGateFtdcApiStruct.h  YDZY.html  ZY.html
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/CTSJGSJCJJK/: CTP-GETDATACOLLECTAPIVERSION.html  CTP-GETSYSTEMINFO.html
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/HQJK/CTHOSTFTDCMDAPI/: JOIN.html  REGISTERFRONT.html  UNSUBSCRIBEFORQUOTERSP.html
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/HQJK/CTHOSTFTDCMDSPI/: ONFRONTDISCONNECTED.html  ONRSPSUBFORQUOTERSP.html  ONRSPUNSUBFORQUOTERSP.html  ONRSPUSERLOGIN.html  ONRSPUSERLOGOUT.html
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/JYJK/CTHOSTFTDCTRADERAPI/: GETAPIVERSION.html  GETFRONTINFO.html  RELEASE.html  REQAUTHENTICATE.html  REQCOMBACTIONINSERT.html  REQEXECORDERINSERT.html  REQGENUSERTEXT.html  REQQRYCFMMCTRADINGACCOUNTKEY.html  REQQRYINVESTORCOMMODITYGROUPSPMMMARGIN.html  REQQRYINVESTORPOSITION.html  REQQRYINVESTORPOSITIONDETAIL.html  REQQRYINVESTORPRODRCAMSMARGIN.html  REQQRYMMINSTRUMENTCOMMISSIONRATE.html  REQQRYMMOPTIONINSTRCOMMRATE.html  REQQRYNOTICE.html  REQQRYOPTIONINSTRCOMMRATE.html  REQQRYOPTIONSELFCLOSE.html  REQQRYRCAMSINSTRPARAMETER.html  REQQRYRCAMSINTRAPARAMETER.html  REQQRYRCAMSSHORTOPTADJUSTPARAM.html  REQQRYSETTLEMENTINFO.html  REQQRYSETTLEMENTINFOCONFIRM.html  REQQRYSPBMADDONINTERPARAMETER.html  REQQRYSPBMFUTUREPARAMETER.html  REQQRYSPBMINVESTORPORTFDEF.html  REQQRYSPMMPRODUCTPARAM.html  REQQRYTRANSFERBANK.html  REQQRYUSERSESSION.html  REQQUERYCFMMCTRADINGACCOUNTTOKEN.html  REQSETTLEMENTINFOCONFIRM.html  REQUSERLOGINWITHTEXT.html  _CTHOSTFTDCTRADERAPI.html
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/JYJK/CTHOSTFTDCTRADERSPI/: ONERRRTNBATCHORDERACTION.html  ONERRRTNCANCELOFFSETSETTING.html  ONERRRTNEXECORDERINSERT.html  ONERRRTNFUTURETOBANKBYFUTURE.html  ONERRRTNOPTIONSELFCLOSEACTION.html  ONERRRTNQUERYBANKBALANCEBYFUTURE.html  ONERRRTNQUOTEINSERT.html  ONERRRTNREPEALBANKTOFUTUREBYFUTUREMANUAL.html  ONERRRTNSPDAPPLY.html  ONERRRTNSPDAPPLYACTION.html  ONFRONTCONNECTED.html  ONRSPBATCHORDERACTION.html  ONRSPCANCELOFFSETSETTING.html  ONRSPEXECORDERINSERT.html  ONRSPFORQUOTEINSERT.html  ONRSPFROMFUTURETOBANKBYFUTURE.html  ONRSPHEDGECFMACTION.html  ONRSPPARKEDORDERINSERT.html  ONRSPQRYACCOUNTREGISTER.html  ONRSPQRYBROKERTRADINGPARAMS.html  ONRSPQRYCFMMCTRADINGACCOUNTKEY.html  ONRSPQRYEXCHANGEMARGINRATE.html  ONRSPQRYEXCHANGERATE.html  ONRSPQRYINVESTORCOMMODITYSPMMMARGIN.html  ONRSPQRYINVESTORINFOCOMMREC.html  ONRSPQRYINVESTORPOSITION.html  ONRSPQRYINVESTORPRODRCAMSMARGIN.html  ONRSPQRYPARKEDORDERACTION.html  ONRSPQRYRCAMSINSTRPARAMETER.html  ONRSPQRYRCAMSINTRAPARAMETER.html  ONRSPQRYRISKSETTLEPRODUCTSTATUS.html  ONRSPQRYSECAGENTCHECKMODE.html  ONRSPQRYSPBMINTRAPARAMETER.html  ONRSPQRYSPMMINSTPARAM.html  ONRSPQRYTRADEROFFER.html  ONRSPQRYTRANSFERSERIAL.html  ONRSPQRYUSERSESSION.html  ONRSPQUERYBANKACCOUNTMONEYBYFUTURE.html  ONRSPQUOTEACTION.html  ONRSPQUOTEINSERT.html  (+11 more)
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/QTYWGZ/: EDHQJR.html  HYZTBHSM2.html  TJDGZ.html
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/reference/TGATEWGJRZN/: 6.7.12TGATEBBGXSM.html  TGATEWGJRZN.html
Ctp.Bridge.C/ctp-sdk/v6.7.13_20260225/traderapi/win-x64/: ThostFtdcTraderApi.h
Ctp.Bridge.C/include/: ctp_bridge.h
Ctp.Bridge.Net/: Common.fs  Ctp.Bridge.Net.fsproj  MdBridge.fs  TraderBridge.fs
Ctp.Net/: AssemblyInfo.fs  Common.fs  Ctp.Net.fsproj  Md.fs  Trader.fs
Ctp.Net/Bridge/: Common.fs  CtpEnums.fs  MdBridge.fs  TraderBridge.fs
Ctp.Net/CSharp/: CtpException.fs  MdClient.fs  TraderClient.fs
Demos/: QueryAccount.cs  QueryAccount.fsx  QueryCancellation.cs  QueryCancellation.fsx  Subscription.cs  Subscription.fsx
Demos/FlowControl/: FlowControl.fsproj  README.md  README.zh-CN.md
Demos/Queries/: Program.fs  Queries.fsproj  README.md  README.zh-CN.md  options.template.json
Demos/Subscription/: Program.fs  README.md  README.zh-CN.md
Demos/Subscrption/: Program.fs  README.md  README.zh-CN.md  options.template.json
NativeBridge/: CMakeLists.txt  README.md  README.zh-CN.md  build.ps1  build.sh
NativeBridge/ctp-sdk/v6.7.13_20260225/reference/: #TOPICS  #WINDOWS  $FIftiMain  6.6.1P1BBGXSM.html  6.6.5BBGXSM.html  6.6.8BBGXSM.html  6.7.11BBGXSM.html  6.7.1BBGXSM.html  6.7.9-P1BBGXSM.html  API接口说明.hhk  GXLS.html  _Index.html  error.xml  error_tgate.xml
NativeBridge/include/: ctp_bridge.h
NativeBridge/src/: md_bridge.cpp  trader_bridge.cpp
Tests/Ctp.Net.SmokeTests/: .gitignore  Ctp.Net.SmokeTests.fsproj  Program.fs
Tests/Ctp.Net.Tests/: Ctp.Net.Tests.fsproj  Program.fs
badges/: test-results.json
plans/: ctp-net-trader-fs-traderclient-mailboxp-witty-nova.md  trader-client-unimplemented-api.md
(+298 files in other folders)
